--- a/practical_exloir/精化阶段/界面原型设计/基础数据管理/基础数据管理.html
+++ b/practical_exloir/精化阶段/界面原型设计/基础数据管理/基础数据管理.html
@@ -2,12 +2,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>无标题文档</title>
+<title>基础数据管理子系统</title>
+<style type="text/css">
+<!--
+.STYLE1 {color: #FFFFFF}
+-->
+</style>
 </head>
 
 <body>
-<p>计划分类</p>
-<p>字典表</p>
-<p>课程时间</p>
+<p><a href="计划分类.html" target="mainFrame">计划分类</a></p>
+<p><a href="课程分类.html" target="mainFrame">课程分类</a></p>
+<p><a href="知识分类.html" target="mainFrame">知识分类</a></p>
+<p><a href="问题分类.html" target="mainFrame">问题分类</a></p>
+<p><a href="教学方向.html" target="mainFrame">教学方向</a></p>
+<p><a href="字典表.html" target="mainFrame">字典表</a></p>
+<p><a href="课表时间.html" target="mainFrame">课表时间</a></p>
 </body>
 </html>
