--- a/practical_exloir/精化阶段/界面原型设计/基础数据管理/问题分类.html
+++ b/practical_exloir/精化阶段/界面原型设计/基础数据管理/问题分类.html
@@ -6,13 +6,13 @@
 </head>
 
 <body>
-<p><strong>基础数据管理/计划分类</strong></p>
+<p><strong>基础数据管理/问题分类</strong></p>
 <form id="form1" name="form1" method="post" action="">
   <p>
     <input type="button" name="Submit" value="增加分类" />
-    <a href="计划分类_添加.html" target="mainFrame">10</a>
+    <a href="问题分类_添加.html" target="mainFrame">18</a>
     <input type="button" name="Submit2" value="编辑分类" />
-    <a href="计划分类_编辑.html" target="mainFrame">11</a>  
+    <a href="问题分类_编辑.html" target="mainFrame">19</a>  
     <input type="button" name="Submit3" value="删除分类" />
   </p>
   <table width="860" height="113" border="1">
@@ -23,25 +23,25 @@
       <td>有效性</td>
     </tr>
     <tr>
-      <td>电子技术</td>
-      <td>ERP应用</td>
-      <td>电子技术产品</td>
-      <td>启用</td>
-    </tr>
-    <tr>
-      <td>软件开发</td>
+      <td>热门问题</td>
       <td>Java开发</td>
-      <td>主流编码技术</td>
+      <td>Java开发问题</td>
       <td>启用</td>
     </tr>
     <tr>
-      <td>软件开发</td>
-      <td>大数据应用开发</td>
-      <td>大数据技术</td>
+      <td>我的问题</td>
+      <td>JavaWeb</td>
+      <td>网页设计问题</td>
+      <td>启用</td>
+    </tr>
+    <tr>
+      <td>已解决问题</td>
+      <td>JavaWeb</td>
+      <td>网页设计问题</td>
       <td>启用</td>
     </tr>
   </table>
 </form>
-<p>&nbsp;</p>
 </body>
+
 </html>
