统计子系统

--- a/practical_exloir/精化阶段/界面原型设计/统计分析/统计分析.html
+++ b/practical_exloir/精化阶段/界面原型设计/统计分析/统计分析.html
@@ -2,10 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>无标题文档</title>
+<title>就业培训管理子系统</title>
+<style type="text/css">
+<!--
+.STYLE1 {color: #FFFFFF}
+-->
+</style>
 </head>
-
 <body>
-统计分析功能栏
+<p><a href="登录信息统计.html"  target="mainFrame">登录信息统计</a></p>
+<p><a href="课程过程报表.html"  target="mainFrame">课程过程报表</a></p>
+<p><a href="课程完成报表.html"  target="mainFrame">课程完成报表</a></p>
+<p><a href="培训计划过程报表.html"  target="mainFrame">培训计划过程报表</a></p>
+<p><a href="培训计划使用情况报表.html"  target="mainFrame">培训计划使用情况报表</a></p>
+<p><a href="培训计划完成报表.html"  target="mainFrame">培训计划完成报表</a></p>
+<p><a href="用户信息报表.html"  target="mainFrame">用户信息报表</a></p>
 </body>
 </html>
