培训子系统

--- a/practical_exloir/精化阶段/界面原型设计/培训管理/培训管理.html
+++ b/practical_exloir/精化阶段/界面原型设计/培训管理/培训管理.html
@@ -2,10 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>无标题文档</title>
+<title>就业培训管理子系统</title>
+<style type="text/css">
+<!--
+.STYLE1 {color: #FFFFFF}
+-->
+</style>
 </head>
-
 <body>
-培训管理功能栏
+<p><a href="公共课管理.html" target="mainFrame">公共课管理</a></p>
+<p><a href="华迪培训.html" target="mainFrame">华迪培训</a></p>
+<p><a href="计划(实训)管理.html" target="mainFrame">计划(实训)管理</a></p>
 </body>
 </html>
