--- a/practical_exloir/精化阶段/界面原型设计/内容管理/内容管理.html
+++ b/practical_exloir/精化阶段/界面原型设计/内容管理/内容管理.html
@@ -2,14 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>无标题文档</title>
+<title>内容管理</title>
 </head>
 
 <body>
 <p>内容管理功能项：</p>
-<p><a href="创建大类.html" target="mainFrame">创建大类</a></p>
-<p>功能2</p>
-<p>功能3</p>
-<p>。。。 </p>
+<p><a href="内容编辑.html">内容编辑</a></p>
+<p><a href="类别管理.html">类别管理</a></p>
+<p><a href="频道编辑权限设置.html">频道编辑权限设置</a></p>
+<p><a href="频道范围权限设置.html">频道范围权限设置</a></p>
+<p>&nbsp; </p>
 </body>
+
 </html>
