--- a/practical_exloir/精化阶段/界面原型设计/测评考试/测评考试.html
+++ b/practical_exloir/精化阶段/界面原型设计/测评考试/测评考试.html
@@ -3,9 +3,26 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 <title>无标题文档</title>
+<style type="text/css">
+<!--
+.STYLE1 {
+	font-family: Geneva, Arial, Helvetica, sans-serif;
+	font-size: 18px;
+}
+.STYLE2 {
+	font-family: "Times New Roman", Times, serif;
+	font-size: 16px;
+}
+-->
+</style>
 </head>
 
 <body>
-测评考试功能栏
+<p class="STYLE1">测评考试功能项：</p>
+<p class="STYLE2"><a href="独立考试设置.html">独立考试设置</a></p>
+<p class="STYLE2"><a href="试题知识点.html">试题知识点</a></p>
+<p class="STYLE2"><a href="试题库管理.html">试题库管理</a></p>
+<p class="STYLE2"><a href="人工阅卷.html">人工阅卷</a></p>
+<p class="STYLE2"><a href="成绩统计.html">成绩统计</a></p>
 </body>
 </html>
