界面原型提交
lsx

--- a/practical_exloir/精化阶段/界面原型设计/系统管理/333.html
+++ b/practical_exloir/精化阶段/界面原型设计/系统管理/333.html
@@ -6,10 +6,16 @@
 </head>
 
 <body>
-<p><strong>知识管理功能栏</strong></p>
-<p><a href="权威知识管理.html" target="mainFrame">权威知识管理</a></p>
-<p><a href="权威知识转化.html" target="mainFrame">威知识转化权</a></p>
-<p><a href="问题中心.html" target="mainFrame">问题中心</a></p>
-<p>&nbsp;</p>
+<p>访问统计</p>
+<h4>主站：</h4>
+<form id="form1" name="form1" method="post" action="">
+  <label>
+  <input type="radio" name="radiobutton" value="radiobutton" />
+  </label>
+云迪在线学习平台
+</form>
+<h4>子站点：</h4>
+<p>云迪在线</p>
+<p>华迪</p>
 </body>
 </html>
