--- a/practical_exloir/精化阶段/界面原型设计/系统管理/清理无效课件.html
+++ b/practical_exloir/精化阶段/界面原型设计/系统管理/清理无效课件.html
@@ -6,10 +6,12 @@
 </head>
 
 <body>
-<p><strong>知识管理功能栏</strong></p>
-<p><a href="权威知识管理.html" target="mainFrame">权威知识管理</a></p>
-<p><a href="权威知识转化.html" target="mainFrame">威知识转化权</a></p>
-<p><a href="问题中心.html" target="mainFrame">问题中心</a></p>
+<h4>清理无效课件</h4>
+<form id="form1" name="form1" method="post" action="">
+  <label>
+  <input type="submit" name="Submit" value="清理文件" />
+  </label>
+</form>
 <p>&nbsp;</p>
 </body>
 </html>
