--- a/practical_exloir/精化阶段/界面原型设计/系统管理/系统管理.html
+++ b/practical_exloir/精化阶段/界面原型设计/系统管理/系统管理.html
@@ -6,6 +6,14 @@
 </head>
 
 <body>
-系统管理功能栏
+<h3>系统管理</h3>
+<p><a href="人员管理.html" target="mainFrame">人员管理</a></p>
+<p><a href="机构管理.html"  target="mainFrame">机构管理</a></p>
+<p><a href="二级管理员授权管理.html"  target="mainFrame">二级管理员授权管理</a></p>
+<p><a href="角色权限分配.html"  target="mainFrame">角色权限分配</a></a></p>
+<p><a href="人员权限分配.html"  target="mainFrame">人员权限分配</a></p>
+<p><a href="人员组织机构批量修改.html" target="mainFrame">人员组织机构批量修改</a></p>
+<p><a href="cms统计分析.html" target="_parent">cms统计分析</a></p>
+<p><a href="清理无效课件.html" target="mainFrame">清理无效课件</a></p>
 </body>
 </html>
