资源管理界面

--- a/practical_exloir/精化阶段/界面原型设计/资源管理/子类文件.html
+++ b/practical_exloir/精化阶段/界面原型设计/资源管理/子类文件.html
@@ -6,9 +6,20 @@
 </head>
 
 <body>
-<p><a href="测试资源库.html">测试资源库</a></p>
-<p><a href="培训师管理.html">培训师管理</a></p>
-<p><a href="方案库.html">方案库</a></p>
-<p><a href="方案管理.html">方案管理 </a></p>
+<p>资源管理\测试资源库</p>
+<table width="294" border="1">
+  <tr>
+    <td width="143">名称</td>
+    <td width="135">BP路演案例分析.MP4</td>
+  </tr>
+  <tr>
+    <td>有效性</td>
+    <td>有效</td>
+  </tr>
+  <tr>
+    <td>操作</td>
+    <td> 收藏 下载 预览</td>
+  </tr>
+</table>
 </body>
 </html>
