--- a/practical_exloir/精化阶段/界面原型设计/资源管理/查询界面.html
+++ b/practical_exloir/精化阶段/界面原型设计/资源管理/查询界面.html
@@ -6,9 +6,19 @@
 </head>
 
 <body>
-<p><a href="测试资源库.html">测试资源库</a></p>
-<p><a href="培训师管理.html">培训师管理</a></p>
-<p><a href="方案库.html">方案库</a></p>
-<p><a href="方案管理.html">方案管理 </a></p>
+<table width="297" height="108" border="1">
+  <tr>
+    <td>名称</td>
+    <td>BP案例</td>
+  </tr>
+  <tr>
+    <td>有效性</td>
+    <td>有效</td>
+  </tr>
+  <tr>
+    <td>操作</td>
+    <td><a href="编辑文件.html">编辑</a> 删除 失效 设置权限</td>
+  </tr>
+</table>
 </body>
 </html>
