资源界面更新2

--- a/practical_exloir/精化阶段/界面原型设计/资源管理/方案管理.html
+++ b/practical_exloir/精化阶段/界面原型设计/资源管理/方案管理.html
@@ -51,7 +51,7 @@
       <td>吴向明</td>
       <td>吴向明</td>
       <td>2020.06.30 15：:1 </td>
-      <td><a href="编辑课程1.html">编辑</a> 删除 考试设置</td>
+      <td><a href="编辑课程1.html">编辑</a> 删除 <a href="新增考试_分数配置.html">考试设置</a></td>
     </tr>
   </table>
 </form>
