--- a/practical_exloir/精化阶段/界面原型设计/内容管理/内容管理.html
+++ b/practical_exloir/精化阶段/界面原型设计/内容管理/内容管理.html
@@ -7,10 +7,10 @@
 
 <body>
 <p>内容管理功能项：</p>
-<p><a href="内容编辑.html">内容编辑</a></p>
-<p><a href="类别管理.html">类别管理</a></p>
-<p><a href="频道编辑权限设置.html">频道编辑权限设置</a></p>
-<p><a href="频道范围权限设置.html">频道范围权限设置</a></p>
+<p><a href="内容编辑.html" target="mainFrame">内容编辑</a></p>
+<p><a href="类别管理.html" target="mainFrame">类别管理</a></p>
+<p><a href="频道编辑权限设置.html" target="mainFrame">频道编辑权限设置</a></p>
+<p><a href="频道范围权限设置.html" target="mainFrame">频道范围权限设置</a></p>
 <p>&nbsp; </p>
 </body>
 
