--- a/practical_exloir/精化阶段/界面原型设计/教学管理/教学管理.html
+++ b/practical_exloir/精化阶段/界面原型设计/教学管理/教学管理.html
@@ -6,6 +6,15 @@
 </head>
 
 <body>
-教学管理功能栏
+<p><a href="成绩管理.html" target="mainFrame">成绩管理</a></p>
+<p><a href="讲师答疑管理.html" target="mainFrame">讲师答疑管理</a></p>
+<p><a href="课程培训师管理.html" target="mainFrame">课程培训师管理</a></p>
+<p><a href="计划培训师管理.html" target="mainFrame">计划培训师管理</a></p>
+<p><a href="作业管理.html" target="mainFrame">作业管理</a></p>
+<p><a href="归档管理.html" target="mainFrame">归档管理</a></p>
+<p><a href="签到管理.html" target="mainFrame">签到管理</a></p>
+<p><a href="直播管理 .html" target="mainFrame">直播管理 </a></p>
 </body>
+
+
 </html>
