--- a/practical_exloir/精化阶段/界面原型设计/测评考试/测评考试.html
+++ b/practical_exloir/精化阶段/界面原型设计/测评考试/测评考试.html
@@ -19,10 +19,10 @@
 
 <body>
 <p class="STYLE1">测评考试功能项：</p>
-<p class="STYLE2"><a href="独立考试设置.html">独立考试设置</a></p>
-<p class="STYLE2"><a href="试题知识点.html">试题知识点</a></p>
-<p class="STYLE2"><a href="试题库管理.html">试题库管理</a></p>
-<p class="STYLE2"><a href="人工阅卷.html">人工阅卷</a></p>
-<p class="STYLE2"><a href="成绩统计.html">成绩统计</a></p>
+<p class="STYLE2"><a href="独立考试设置.html" target="mainFrame">独立考试设置</a></p>
+<p class="STYLE2"><a href="试题知识点.html" target="mainFrame">试题知识点</a></p>
+<p class="STYLE2"><a href="试题库管理.html" target="mainFrame">试题库管理</a></p>
+<p class="STYLE2"><a href="人工阅卷.html" target="mainFrame">人工阅卷</a></p>
+<p class="STYLE2"><a href="成绩统计.html" target="mainFrame">成绩统计</a></p>
 </body>
 </html>
