--- a/practical_exloir/精化阶段/界面原型设计/资源管理/添加方案-方案管理.html
+++ b/practical_exloir/精化阶段/界面原型设计/资源管理/添加方案-方案管理.html
@@ -18,10 +18,13 @@
   <input type="submit" name="Submit2" value="删除方案" />
   </label>
   <label>
+  <a href="添加方案-上传.html">
   <input type="submit" name="Submit3" value="添加方案" />
-  </label>
+  </a></label>
+  <a href="添加方案-上传.html">
   <label>1</label>
-<label></label>
+  <label></label>
+  </a>
 </form>
 <form id="form2" name="form2" method="post" action="">
   <table width="514" height="200" border="1">
