--- a/practical_exloir/精化阶段/界面原型设计/资源管理/资源管理.html
+++ b/practical_exloir/精化阶段/界面原型设计/资源管理/资源管理.html
@@ -6,9 +6,9 @@
 </head>
 
 <body>
-<p><a href="测试资源库.html">测试资源库</a></p>
-<p><a href="培训师管理.html">培训师管理</a></p>
-<p><a href="方案库.html">方案库</a></p>
-<p><a href="方案管理.html">方案管理 </a></p>
+<p><a href="测试资源库.html" target="mainFrame">测试资源库</a></p>
+<p><a href="培训师管理.html" target="mainFrame">培训师管理</a></p>
+<p><a href="方案库.html" target="mainFrame">方案库</a></p>
+<p><a href="方案管理.html" target="mainFrame">方案管理 </a></p>
 </body>
 </html>
