--- a/practical_exloir/精化阶段/界面原型设计/资源管理/添加方案-方案章节管理.html
+++ b/practical_exloir/精化阶段/界面原型设计/资源管理/添加方案-方案章节管理.html
@@ -40,6 +40,9 @@
      </tr>
    </table>
    <p>
+     <label></label>
+   </p>
+   <p>
      <label>
      <a href="添加方案-启用方案.html">
      <input type="submit" name="Submit5" value="保存" />
