--- a/practical_exloir/精化阶段/界面原型设计/知识管理/知识管理.html
+++ b/practical_exloir/精化阶段/界面原型设计/知识管理/知识管理.html
@@ -8,7 +8,7 @@
 <body>
 <p><strong>知识管理功能栏</strong></p>
 <p><a href="权威知识管理.html" target="mainFrame">权威知识管理</a></p>
-<p><a href="权威知识转化.html" target="mainFrame">威知识转化权</a></p>
+<p><a href="权威知识转化.html" target="mainFrame">权威知识转化</a></p>
 <p><a href="问题中心.html" target="mainFrame">问题中心</a></p>
 <p>&nbsp;</p>
 </body>
