--- a/practical_exloir/精化阶段/界面原型设计/系统管理/角色权限分配.html
+++ b/practical_exloir/精化阶段/界面原型设计/系统管理/角色权限分配.html
@@ -86,6 +86,23 @@
       </label></td>
   </tr>
 </table>
+ <form id="form3" name="form3" method="post" action="">
+   <label>
+     <input type="button" name="Submit9" value="保存" />
+   </label>
+ 更改角色名称：
+ <label>
+ <input name="textfield2" type="text" size="10" />
+ </label>
+ 重置角色名称  收回所有权限
+ </form>
+ <h2>云迪在线学习平台</h2>
+ <h4>培训管理</h4>
+ <p>华迪培训 公共课管理 计划管理 设置岗位</p>
+ <h4>测评考试</h4>
+ <p>独立考试设置 试题知识点 考试库管理 人工阅卷 成绩统计</p>
+ <h4>资源管理</h4>
+ <p>方案管理 培训师管理 测试资源库 方案库</p>
  <p>&nbsp; </p>
 </body>
 </html>
